--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@android:drawable/ic_menu_home"
+        android:icon="@drawable/ic_home"
         android:title="@string/app_name" />
     <item
         android:id="@+id/notes"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:icon="@drawable/ic_notes"
         android:title="@string/my_notes" />
 </menu>
 
